--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,6 +1,8 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+        #url: '%env(resolve:DATABASE_URL)%'
+        #url: postgresql://siap:admin@10.168.241.29:5434/postgres
+        url: 'postgresql://%env(resolve:DB_USER)%:%env(resolve:DB_PASSWORD)%@%env(resolve:DB_HOST)%:%env(resolve:DB_PORT)%/%env(resolve:DB_NAME)%'
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
